--- a/pom.xml
+++ b/pom.xml
@@ -7,21 +7,25 @@
     <groupId>com.javarush</groupId>
     <artifactId>spring-1</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>war</packaging>
 
-    <modules>
-        <module>service</module>
-        <module>repository</module>
-        <module>ui</module>
-        <module>rest</module>
-    </modules>
 
     <properties>
-        <maven.compiler.source>18</maven.compiler.source>
-        <maven.compiler.target>18</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
-    <dependencyManagement>
+    <build>
+        <finalName>root</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.2</version>
+            </plugin>
+        </plugins>
+    </build>
+
         <dependencies>
             <dependency>
                 <groupId>jakarta.servlet</groupId>
@@ -89,6 +93,11 @@
                 <artifactId>lombok</artifactId>
                 <version>1.18.26</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.javarush</groupId>
+                <artifactId>repository</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
-    </dependencyManagement>
 </project>
