--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,27 @@
-version: '3.8'
+version: "3.9"
 
 services:
-  db:
-    image: mysql:8.0.28-oracle
-    volumes:
-      - ./mysql-dump:/docker-entrypoint-initdb.d
-    # переменные окружения
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=todo_nadir
-
-  web:
-    build: .
+  server:
+    build: /
     ports:
-      - "8080:8080"
-    # "зависит от",
-    links:
-      - db
+      - '8080:8080'
+    depends_on:
+      db:
+        condition: service_healthy
+
+  db:
+    image: mysql:8.0.32
+    environment:
+      MYSQL_ROOT_PASSWORD: 'root'
+    ports:
+      - '3306:3306'
+    volumes:
+      - my-db:/var/lib/mysql
+    healthcheck:
+      test: "/usr/bin/mysql --user=root --password=root --execute \"SHOW DATABASES;\""
+      interval: 2s
+      timeout: 30s
+      retries: 10
+
+volumes:
+  my-db:
